# skywire_nano_sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig
boards/arm/: nonsecure_partition.dtsi  skywire_nano.dtsi
boards/arm/skywire_nano/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  skywire_nano_app.dts  skywire_nano_app_defconfig  skywire_nano_app_v1_0_x.overlay  skywire_nano_app_v1_0_x_defconfig
boards/arm/variants/: Kconfig.board  Kconfig.defconfig  board.cmake  skywire_nano_widget.dts  skywire_nano_widget_defconfig
dts/nimbelink/: nonsecure_partition.dtsi  skywire_nano.dtsi
scripts/: .gitignore  __cmd__.py  __main__.py  __west__.py  dualie.py  requirements.txt  setup.cfg  setup.py  west-commands.yml
scripts/commands/: app.py  command.py  dfu.py  flash.py  format.py  skywire.py  update.py
scripts/nimbelink/sdk/: __cmd__.py  __init__.py  project.py
scripts/nimbelink/sdk/commands/: project.py
scripts/nimbelink/sdk/commands/app/: __init__.py  format.py  setup.py  sign.py
scripts/nimbelink/sdk/commands/device/: flash.py  initialize.py  lock.py  ping.py  update.py
scripts/nl_sdk/: __cmd__.py  __init__.py  project.py
scripts/nl_sdk/commands/: __init__.py  format.py  project.py  skywire.py  update.py
scripts/nl_sdk/commands/app/: __init__.py  command.py  format.py  setup.py  sign.py
scripts/nl_sdk/commands/device/: __init__.py  command.py  convert.py  flash.py  initialize.py  lock.py  ping.py  update.py
scripts/tools/: at.py  dfu.py  flash.py  imgtool.py  wsl.py  xmodem.py
scripts/tools/debugger/: ahb.py  ctrlAp.py  dap.py  mailbox.py  uicr.py
scripts/tools/devices/: skywire.py
src/: CMakeLists.txt
src/nimbelink/: CMakeLists.txt
src/nimbelink/sdk/: CMakeLists.txt  Kconfig  Kconfig.peripheral_access  Kconfig.version  image_valid.c  nl_at_cmd.c  nl_fatal_error.c  nl_fota_download.c  nl_reboot.c  nl_sockets.c  peripheral_requests.c  peripheral_requests.cpp
src/nimbelink/sdk/app/: CMakeLists.txt  version.c  version.h
src/nimbelink/sdk/at/: cme.h  cms.h  extended_cme.h
src/nimbelink/sdk/cell/at/: cme.h  cms.h  extended_cme.h
src/nimbelink/sdk/secure_services/: CMakeLists.txt  app.h  async.h  at.h  call.h  kernel.h  net.h
src/nimbelink/sdk/secure_services/helpers/: zephyr.cpp  zephyr.h
src/nimbelink/sdk/secure_services/zephyr/: call.c
zephyr/: module.yml
