# Setup for the NimbeLink SDK package
#
# (C) NimbeLink Corp. 2021
#
# All rights reserved except as explicitly granted in the license agreement
# between NimbeLink Corp. and the designated licensee. No other use or disclosure
# of this software is permitted. Portions of this software may be subject to third
# party license terms as specified in this software, and such portions are
# excluded from the preceding copyright notice of NimbeLink Corp.

[metadata]
name = pynl-sdk
version = 1.0.0
description = NimbeLink SDK library
copyright = (C) NimbeLink Corp. 2021
author = Erik Johnson
author-email = erik.johnson@nimbelink.com
home-page = https://github.com/NimbeLink/skywire_nano_sdk

[options]
packages = find_namespace:
install_requires =
    imgtool == 1.7.2
    pynl-cell @ git+https://github.com/NimbeLink/pynl-cell@v1.0.0
